Fixed list alignment in CSS Cheat Sheet

--- a/FRONT/css/cheat_cheat_sheet.css
+++ b/FRONT/css/cheat_cheat_sheet.css
@@ -59,7 +59,7 @@ div{
 }
 
 #container_list{
-    list-style: lower-greek;
+    list-style: lower-greek inside;
 }
 
 #container_margin{
